[project]
name = "seismicprocagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.5.2",
    "h5py>=3.13.0",
    "llvmlite==0.44.0",
    "matplotlib>=3.10.3",
    "mcp[cli]>=1.9.2",
    "multidimio>=0.5.3",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "psutil>=5.9.8",
    "scipy>=1.15.3",
    "segyio>=1.9.13",
    "torch>=2.7.0",
]
